# wagtail-icon-chooser

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/workflows/: publish.yml
sandbox/home/: models.py
sandbox/home/migrations/: 0003_homepage_icon_homepage_stream_field_with_icon.py
sandbox/home/templates/home/: welcome_page.html
sandbox/sandbox/settings/: base.py  dev.py
sandbox/search/: views.py
wagtailiconchooser/: apps.py  blocks.py  models.py  utils.py  widgets.py
wagtailiconchooser/static/wagtailiconchooser/css/: icon-chooser-widget.css
wagtailiconchooser/static/wagtailiconchooser/js/: icon-chooser-widget-controller.js  icon-chooser-widget-telepath.js  icon-chooser-widget.js
wagtailiconchooser/templates/wagtailiconchooser/widgets/: icon-chooser-widget.html
wagtailiconchooser/templatetags/: wagtailiconchooser_tags.py
