[metadata]
name = wagtail-icon-chooser
version = 0.0.7
description = Wagtail Icon Chooser
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/erick-otenyo/wagtail-icon-chooser
author = Erick Otenyo
author_email = otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    wagtail>=4.2.2




